DTSAM-1239 Add extra test coverage for the existing accessType rules.